<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/back_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DinoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="436dp"
        android:layout_height="185dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/black"
        android:contentDescription="@string/map_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/zone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"
            android:fontFamily="@font/lilita_one"
            android:text="@string/zone_nameS"
            android:textColor="@color/black"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:gravity="center"
                android:text="@string/newDino"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/dino_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background"
                android:inputType="text"
                android:paddingHorizontal="60dp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lilita_one"
                android:gravity="center"
                android:text="@string/newZone"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/new_zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:inputType="text"
                android:paddingHorizontal="60dp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/relocate_dino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:text="@string/relo"
                android:textColor="@color/black"
                android:fontFamily="@font/lilita_one"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/map_btn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:fontFamily="@font/lilita_one"
                android:background="@drawable/input_background"
                android:layout_weight="1"
                android:text="@string/map" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>